--- a/package.json
+++ b/package.json
@@ -3,23 +3,44 @@
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
+    "start": "expo start --dev-client",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.7",
+    "@react-native-firebase/app": "^17.0.0",
+    "@react-native-firebase/auth": "^17.0.0",
+    "@react-native-google-signin/google-signin": "^9.0.2",
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/native-stack": "^6.9.9",
     "expo": "~47.0.12",
+    "expo-dev-client": "~2.0.1",
+    "expo-device": "~5.0.0",
+    "expo-notifications": "~0.17.0",
+    "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
+    "expo-updates": "~0.15.6",
+    "graphql": "^15.8.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.9"
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-web": "~0.18.9",
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@graphql-codegen/cli": "3.0.0",
+    "@graphql-codegen/typescript": "^3.0.0",
+    "@graphql-codegen/typescript-operations": "^3.0.0",
+    "@graphql-codegen/typescript-react-apollo": "^3.3.7",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.70.6",
+    "babel-plugin-module-resolver": "^5.0.0",
     "typescript": "^4.6.3"
   },
   "private": true
