--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
+    "rollbar": "^2.26.1",
     "zustand": "^4.3.3"
   },
   "devDependencies": {
