--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
     "expo": "~47.0.12",
+    "expo-constants": "~14.0.2",
     "expo-dev-client": "~2.0.1",
     "expo-device": "~5.0.0",
     "expo-notifications": "~0.17.0",
     "expo-splash-screen": "~0.17.5",
     "expo-status-bar": "~1.4.2",
-    "expo-updates": "~0.15.6",
     "graphql": "^15.8.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
